rpi5/overleaf/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overleaf
  labels:
    app: overleaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overleaf
  serviceName: overleaf
  template:
    metadata:
      name: overleaf
      labels:
        app: overleaf
    spec:
      containers:
        - name: overleaf
          image: sharelatex/sharelatex:5.2.1@sha256:85b19568e372417a888b1495faf95a9525155013188fb4e3fccdb19abe0cd889
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/overleaf/
              name: data
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          #livenessProbe:
          #  httpGet:
          #    port: 7878
          #    path: /ping
          #  initialDelaySeconds: 30
          #  periodSeconds: 30
          #  timeoutSeconds: 5
          #  failureThreshold: 3
          readinessProbe:
            httpGet:
              port: http
              path: /
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
