rpi5/overleaf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overleaf
spec:
  selector:
    app: overleaf
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
