rpi5/overleaf/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overleaf
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`overleaf.local`) || Host(`overleaf.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: overleaf
          port: 80
  tls:
    secretName: overleaf-cert-tls
    domains:
      - main: overleaf.local
        sans:
          - overleaf.internal
